common/force-app/main/default/objects/CampaignMember/fields/Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type__c</fullName>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investor Update</fullName>
                <default>true</default>
                <label>Investor Update</label>
            </value>
            <value>
                <fullName>Pre-emptive Rights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>