common/force-app/main/default/objects/CampaignMember/fields/Email_Body_Content__c.field-meta.xml
<CustomField>
    <fullName>Email_Body_Content__c</fullName>
    <description>Used within the automated investor update emails to display custom content within the email body.</description>
    <label>Email Body Content</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>