common/force-app/main/default/objects/CampaignMember/fields/Extension_Months__c.field-meta.xml
<CustomField>
    <fullName>Extension_Months__c</fullName>
    <label>Extension Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>