common/force-app/main/default/objects/CampaignMember/fields/FilePublicURL__c.field-meta.xml
<CustomField>
    <fullName>FilePublicURL__c</fullName>
    <label>FilePublicURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>