common/force-app/main/default/objects/CampaignMember/fields/Offer_Terms__c.field-meta.xml
<CustomField>
    <fullName>Offer_Terms__c</fullName>
    <label>Offer Terms</label>
    <length>100</length>
    <type>Text</type>
</CustomField>