common/force-app/main/default/objects/CampaignMember/fields/Rollover_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Rollover_Product_Code__c</fullName>
    <label>Rollover Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>